# fcomb-node-agent

./: .travis.yml  LICENSE  README.md  fcomb-node-agent.cabal  stack.yaml
scripts/: install-agent.sh
scripts/logrotate/: fcomb-agent
scripts/systemd/: fcomb-agent.service  fcomb-agent.socket
scripts/sysvinit/: fcomb-agent
scripts/upstart/: fcomb-agent.conf
src/: Agent.hs  Certs.hs  Config.hs  Docker.hs  Globals.hs  Http.hs  Main.hs
src/Crypto/: RSA.hs
